# cpp-hosting

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  ROADMAP.md
furnace/: CMakeLists.txt  furnace.cpp
furnace/cloudformation/: stack.yaml
furnace/commands/: CreateCommand.cpp  CreateCommand.hpp
hosting/: CMakeLists.txt  actions.cpp  actions.h  command.h  create_command.cpp  create_command.h  hosting.cpp
hosting/commands/: CreateCommand.cpp  CreateCommand.hpp
lib/: libaws-cpp-sdk-core.dylib
scripts/: prepare-aws-sdk.sh
tests/: CMakeLists.txt  command_test.cpp
